Add features to lasagna page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna</title>
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../img/Lasagna.jpg", width="300">
+    <h2>Description</h2>
+    <p>This classic lasagna recipe is made with an easy meat sauce as the base. Layer the sauce with noodles and cheese, then bake until bubbly! This is great for feeding a big family and freezes well, too. Everyone loves a good lasagna, right? It's a great way to feed a crowd and a perfect dish to bring to a potluck. It freezes well. It reheats well. Leftovers will keep you happy for days.</p>
+    <h2>Ingredients</h2>
+    <h3><strong>For the meat sauce</strong></h3>
+    <ul>
+        <li>2 teaspoons extra virgin olive oil</li>
+        <li>1 pound ground beef chuck</li>
+        <li>1/2 medium onion, diced (about 3/4 cup)</li>
+        <li>1/2 large bell pepper, diced (about 3/4 cup) </li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 (28-ounce) can good-quality tomato sauce</li>
+        <li>3 ounces tomato paste (half a 6-ounce can)</li>
+        <li>1 (14 ounce) can crushed tomatoes</li>
+        <li>2 tablespoons chopped fresh oregano, or 2 teaspoons dried oregano</li>
+        <li>1/4 cup chopped fresh parsley, packed</li>
+        <li>1 tablespoon Italian seasoning </li>
+        <li>1 pinch garlic powedr and/or garlic salt</li>
+        <li>1 tablespoon red or white wine vinegar</li>
+        <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
+        <li>Salt</li>
+    </ul>
+    <h3><strong>To assemble the lasagna</strong></h3>
+    <ul>
+        <li>1/2 pound dry lasagna noodles (requires 9 lasagna noodles - unbroken)</li>
+        <li>15 ounces ricotta cheese</li>
+        <li>1 1/2 pounds (24 ounces) mozzarella cheese, grated or sliced</li>
+        <li>1/4 pound (4 ounces) freshly grated Parmesan cheese</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Put pasta water on to boil</li>
+        <li>Brown the ground beef</li>
+        <li>Cook the bell pepper, onions, and garlic; add back the beef</li>
+        <li>Make the sauce</li>
+        <li>Boil and drain the lasagna noodles</li>
+        <li>Prehead the oven to 375<sup>o</sup>F</li>
+        <li>Assemble the lasagna</li>
+        <li>Bake at 375<sup>o</sup>F for 45 minutes</li>
+        <li>Cool and serve</li>
+    </ol>
+    <a href="../index.html">Back to main page</a>
 </body>
 </html>
