--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ODIN RECIPES</title>
 </head>
 <body>
    <h1>Odin Recipes</h1> 
-   <a href="recipes/lasagna.html">Lasagna</a>
+   <p>Recipes that are worth living for</p>
+   <ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/honey-garlic-chicken.html">Honey Garlic Chicken</a></li>
+    <li><a href="recipes/chocolate-cake.html">Chocolate cake</a></li>
+   </ul>
+   
 </body>
 </html>
