Add image and body of two recipes

--- a/recipes/honey-garlic-chicken.html
+++ b/recipes/honey-garlic-chicken.html
@@ -8,6 +8,9 @@
 <body>
    <h1>Honey Garlic Chicken</h1> 
    <img src="../img/chickcen.jpg" alt="Honey Garlic Chicken" width="300">
-
+   <h2>Description</h2>
+   <h2>Ingredients</h2>
+   <h2>Steps</h2>
+   <a href="../index.html">Back to main page</a>
 </body>
 </html>
