--- a/recipes/chocolate-cake.html
+++ b/recipes/chocolate-cake.html
@@ -9,8 +9,30 @@
     <h1>Chocolate cake</h1>
     <img src="../img/chocolate.jpg" alt="Chocolate cake" width="300">
     <h2>Description</h2>
+    <p>decadent. fudgy. sweet. chocolate cake has got to be the most craved recipe in the world.</p>
     <h2>Ingredients</h2>
+    <ul>
+        <li>1 3/4 cups all purpose flour, or (plain flour), (8 oz | 227 g)</li>
+        <li>3/4 cup unsweetened cocoa powder, (2.6 oz | 75 g) or regular Hershey's cocoa powder</li>
+        <li>1 1/2 teaspoon baking powder</li>
+        <li>1 1/2 teaspoon baking soda, (or bi-carb soda)</li>
+        <li>1 teaspoon salt</li>
+        <li>2 cups white granulated sugar, (14 oz | 410 g)</li>
+        <li>2 large eggs</li>
+        <li>1 cup milk, (250 ml)</li>
+        <li>1/2 cup vegetable oil, (125 ml)</li>
+        <li>2 teaspoons pure vanilla extract</li>
+        <li>1 cup boiling water (250 ml)</li>
+    </ul>
     <h2>Steps</h2>
+    <ol>
+        <li>Preheat oven to 350°F (180°C) standard or 320°F (160°C) fan/convection.</li>
+        <li>Lightly grease 2x 9-inch (22cm) round cake pans with butter. Line base with parchment paper.</li>
+        <li>Sift together flour, cocoa, baking powder, baking soda and salt into a large bowl. Whisk in sugar, then add eggs, milk, oil and vanilla. Whisk well to combine until lump free, about 30 seconds.</li>
+        <li>Pour boiling water into batter, mixing well. Cake batter is thin in consistency.</li>
+        <li>Pour batter into cake pans and bake for 30-35 minutes or until a wooden skewer inserted into the centre comes out clean.</li>
+        <li>Let cool for 10 minutes, then turn out onto wire racks to cool completely before frosting.</li>
+    </ol>
     <a href="../index.html">Back to main page</a>
 </body>
 </html>
