--- a/recipes/honey-garlic-chicken.html
+++ b/recipes/honey-garlic-chicken.html
@@ -9,8 +9,28 @@
    <h1>Honey Garlic Chicken</h1> 
    <img src="../img/chickcen.jpg" alt="Honey Garlic Chicken" width="300">
    <h2>Description</h2>
+   <p>Sticky and Easy Honey Garlic Chicken made fast and simple, with the most amazing 5-ingredient honey garlic sauce that is so good you’ll want to use it on everything!</p>
    <h2>Ingredients</h2>
+   <ul>
+    <li>6 chicken thighs, bone in or out, with or without skin*</li>
+    <li>Salt and pepper, to season</li>
+    <li>2 teaspoons garlic powder, to season</li>
+    <li>6 cloves garlic, crushed</li>
+    <li>1/3 cup honey</li>
+    <li>1/4 cup water (or chicken broth)</li>
+    <li>2 tablespoons rice wine vinegar (or apple cider vinegar, or any white vinegar)</li>
+    <li>1 tablespoon soy sauce</li>
+   </ul>
    <h2>Steps</h2>
+   <ol>
+        <li>Season chicken with salt, pepper and garlic powder; set aside.</li>
+        <li>Heat a pan or skillet over medium high heat; sear chicken thigh fillets or breast fillets on both sides until golden and cooked through.</li>
+        <li>Reduce heat after searing on both sides, cover skillet with a lid and continue cooking until the chicken is cooked through, while turning every 5 minutes until done.</li>
+        <li>Drain most of the excess oil from the pan, leaving about 2 tablespoons of pan juiced for added flavour.</li>
+        <li>When chicken is done and cooked through, arrange chicken skin-side up in the pan (if cooking with skin); add the garlic between the chicken and fry until fragrant (about 30 seconds). Add the honey, water, vinegar and soy sauce. Increase heat to medium-high and continue to cook until the sauce reduces down and thicken slightly (about 3-4 minutes).</li>
+        <li>Garnish with parsley and serve over vegetables, rice, pasta or with a salad.</li>
+   </ol>
+
    <a href="../index.html">Back to main page</a>
 </body>
 </html>
