Applied style.css

--- a/recipes/chocolate-cake.html
+++ b/recipes/chocolate-cake.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chocolate cake</title>
 </head>
 <body>
     <h1>Chocolate cake</h1>
-    <img src="../img/chocolate.jpg" alt="Chocolate cake" width="300">
+    <div class="cooking">
+        <img src="../img/chocolate.jpg" alt="Chocolate cake">
+    </div>
     <h2>Description</h2>
     <p>decadent. fudgy. sweet. chocolate cake has got to be the most craved recipe in the world.</p>
     <h2>Ingredients</h2>
