--- a/recipes/honey-garlic-chicken.html
+++ b/recipes/honey-garlic-chicken.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honey Garlic Chicken</title>
 </head>
 <body>
    <h1>Honey Garlic Chicken</h1> 
-   <img src="../img/chickcen.jpg" alt="Honey Garlic Chicken" width="300">
+   <div class="cooking">
+       <img src="../img/chickcen.jpg" alt="Honey Garlic Chicken">
+   </div>
    <h2>Description</h2>
    <p>Sticky and Easy Honey Garlic Chicken made fast and simple, with the most amazing 5-ingredient honey garlic sauce that is so good you’ll want to use it on everything!</p>
    <h2>Ingredients</h2>
