--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../img/Lasagna.jpg", width="300">
+    <div class="cooking">
+        <img src="../img/Lasagna.jpg">
+    </div>
     <h2>Description</h2>
     <p>This classic lasagna recipe is made with an easy meat sauce as the base. Layer the sauce with noodles and cheese, then bake until bubbly! This is great for feeding a big family and freezes well, too. Everyone loves a good lasagna, right? It's a great way to feed a crowd and a perfect dish to bring to a potluck. It freezes well. It reheats well. Leftovers will keep you happy for days.</p>
     <h2>Ingredients</h2>
