--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
    <h1>Odin Recipes</h1> 
-   <p>Recipes that are worth living for</p>
-   <ul>
-    <li><a href="recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="recipes/honey-garlic-chicken.html">Honey Garlic Chicken</a></li>
-    <li><a href="recipes/chocolate-cake.html">Chocolate cake</a></li>
-   </ul>
+   <div class="bigger">
+        <p>Recipes that are worth living for</p>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/honey-garlic-chicken.html">Honey Garlic Chicken</a></li>
+            <li><a href="recipes/chocolate-cake.html">Chocolate cake</a></li>
+        </ul>
+   </div>
+  
    
 </body>
 </html>
